--- a/home_pg.html
+++ b/home_pg.html
@@ -153,7 +153,7 @@
             <a href="home_pg.html">Home <hr></a>
             <a href="case_logs.html">Cases</a>
             <a id="usr" href="user_det.html"><i class="fa-solid fa-user"></i></a>
-            <a href="user_log.html"><button>Logout</button></a>
+            <a href="index.html"><button>Logout</button></a>
         </div>
     </nav>
 
