--- a/case_logs.html
+++ b/case_logs.html
@@ -131,7 +131,7 @@
             <a href="home_pg.html">Home</a>
             <a href="case_logs.html">Cases <hr></a>
             <a id="usr" href="user_det.html"><i class="fa-solid fa-user"></i></a>
-            <a href="user_log.html"><button>Logout</button></a>
+            <a href="index.html"><button>Logout</button></a>
         </div>
     </nav>
     
