--- a/home_pg.html
+++ b/home_pg.html
@@ -93,6 +93,7 @@
             border-radius: 10px;
             color: white;
             cursor: pointer;
+           border: 1px solid rgba(255, 255, 255, 0.295);
         }
 
         #nav_links #laptopview button:hover{
