--- a/user_det.html
+++ b/user_det.html
@@ -271,7 +271,7 @@
                 <a href="case_logs.html">Cases</a>
                 <a href="new_case.html"> Case</a>
                 <a id="usr" href="user_det.html"><i class="fa-solid fa-user"></i></a>
-                <a href="user_log.html"><button>Logout</button></a>
+                <a href="index.html"><button>Logout</button></a>
             </div>
 
             <div id="mobileview">
