--- a/home_pg.html
+++ b/home_pg.html
@@ -245,7 +245,7 @@
                 <a href="case_logs.html">Cases</a>
                 <a href="new_case.html"><i class="fa-solid fa-file-plus"></i> Case</a>
                 <a id="usr" href="user_det.html"><i class="fa-solid fa-user"></i></a>
-                <a href="user_log.html"><button>Logout</button></a>
+                <a href="index.html"><button>Logout</button></a>
             </div>
 
             <div id="mobileview">
