--- a/case_logs.html
+++ b/case_logs.html
@@ -221,7 +221,7 @@
                 <a href="case_logs.html">Cases <hr></a>
                 <a href="new_case.html"> Case</a>
                 <a id="usr" href="user_det.html"><i class="fa-solid fa-user"></i></a>
-                <a href="user_log.html"><button>Logout</button></a>
+                <a href="index.html"><button>Logout</button></a>
             </div>
 
             <div id="mobileview">
@@ -231,7 +231,7 @@
                     <a href="case_logs.html"><i class="fas fa-briefcase"></i>Cases</a>
                     <a href="new_case.html"><i class="fa-solid fa-folder-plus"></i> Case</a>
                     <a id="usr" href="user_det.html"><i class="fas fa-user"></i>Profile</a>
-                    <a href="user_log.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                    <a href="index.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
                 </div>
             </div>
         </div>
