--- a/home_pg.html
+++ b/home_pg.html
@@ -255,7 +255,7 @@
                     <a href="case_logs.html"><i class="fas fa-briefcase"></i>Cases</a>
                     <a href="new_case.html"> <i class="fa-solid fa-folder-plus"></i>Case</a>
                     <a id="usr" href="user_det.html"><i class="fas fa-user"></i>Profile</a>
-                    <a href="user_log.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                    <a href="index.html"><i class="fas fa-sign-out-alt"></i>Logout</a>
                 </div>
             </div>
         </div>
